Extract a lexer-test (maven + JPMS) module from the lexer-module.